# unknown_object_exploration

./: .clang-format  .clang-format.bak  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  makefile  multi_drone_inspection.code-workspace  package.xml  sketches.rnote
airsim/: settings.json
launch/: airsim.launch  airsim_convert_depth_image_to_pointcloud2.launch  airsim_covert_depth_image_to_pointcloud2.launch  gazebo.launch  pid_spline.launch  rviz.launch  spline_tester.launch  test_rrt.launch  voxblox.launch
mdi/: CMakeLists.txt  package.xml  simple_tree.bt
mdi/cmake/: tests.cmake
mdi/data/: simple_tree.bt
mdi/include/mdi/: bbx.hpp  bezier_spline.hpp  common_headers.hpp  common_types.hpp  compound_trajectory.hpp  fov.hpp  functional.hpp  gain.hpp  graph.hpp  linear_trajectory.hpp  mission.hpp  mission_manager.hpp  object_map.hpp  octomap.hpp  overload.hpp  pid_controller.hpp  trajectory.hpp  voxelgrid.hpp  voxelstatus.hpp
mdi/include/mdi/rrt/: rrt.hpp  rrt_builder.hpp  voxelgrid.hpp
mdi/include/mdi/utils/: eigen.hpp  math.hpp  overloads.hpp  random.hpp  rosparam.hpp  rviz.hpp  segmentation.hpp  state.hpp  tf2.hpp  time.hpp  topic.hpp  transform.hpp  transformlistener.hpp  utils.hpp
mdi/include/mdi/utils/rviz/: rviz.hpp
mdi/include/mdi/visualization/: bbx.hpp  fov.hpp
mdi/launch/: airsim.launch  airsim_convert_depth_image_to_pointcloud2.launch  airsim_vis.launch  gazebo.launch  log.conf  map_data.launch  map_to_bt.launch  mission.launch  mission_bridge.launch  mission_pid_test.launch  object_map_completeness.launch  octomap_server.launch  pid_spline.launch  rrt_service.launch  rviz.launch  scanning.launch  segmentation.launch  spline_tester.launch  test_nbv_service.launch  test_rrt.launch  test_rrt_service.launch  test_rrt_with_octomap.launch  visualize_fov.launch  visualize_kdtree.launch  voxblox.launch
mdi/launch/test/: trajectory.test.launch
mdi/libs/kdtree/include/kdtree/: kdtree.hpp  kdtree3.hpp  point.hpp
mdi/libs/kdtree/src/: kdtree.cpp
mdi/rosparam/: camera.yaml  drone.yaml  experiment.yaml  nbv.yaml  prescanned_object_map_completeness.yaml  rrt.yaml
mdi/rqt/: error.xml  rqt_path.xml
mdi/rviz/: octomap.rviz  path.rviz  realsense-D435.rviz  spline.rviz  test_nbv_service.rviz  test_octomap.rviz  trajectory.rviz  visualize_fov.rviz
mdi/scripts/: airsim_generate_voxelgrid_octomap_of_environment.py  bridge_scenario_2_legs.binvox.bt  launch_airsim.sh  make_px4_airsim.sh  run_airsim.sh  spline_interpolation.ipynb
mdi/scripts/nodes/: segmentation_service.py
mdi/sdf/: iris.sdf
mdi/src/: bezier_spline.cpp  compound_trajectory.cpp  linear_trajectory.cpp  mission.cpp  mission_manager.cpp  mission_state.cpp  octomap.cpp  pid_controller.cpp  pid_controller_node_old.cpp  publish_traversed_path.cpp  rrt.cpp  spline_tester.cpp  trajectory.cpp  trajectory_follower.cpp  transformlistener.cpp  visualize_kdtree.cpp
mdi/src/nodes/: control_manager.cpp  get_octomap_from_server_and_write_to_bt_file.cpp  mission_manager.cpp  object_map.cpp  object_map_percentage_completion.cpp  object_map_processor.cpp  rrt_service.cpp  time_since_start_publisher.cpp  write_map_post_experiment.cpp
mdi/src/rrt/: rrt.cpp
mdi/test/: linear_search_vs_kdtree.cpp  nbv_service.test.cpp  octomap.test.cpp  rrt.test.cpp  rrt_service.test.cpp  trajectory.test.cpp  visualize_fov.cpp  visualize_raycast.cpp
mdi/urdf/: iris-with-realsense-D435.urdf.xacro
mdi/xacro/: inertia_calc.xacro
mdi_msgs/: CMakeLists.txt  package.xml
mdi_msgs/msg/: ControllerStateStamped.msg  DroneConfig.msg  Error.msg  FoV.msg  FoVGainMetric.msg  FovCount.msg  FovVolume.msg  GainScore.msg  MissionStateStamped.msg  NbvConfig.msg  ObjectMapCompleteness.msg  PointNormStamped.msg  VoxelCount.msg  VoxelVolume.msg
mdi_msgs/srv/: Model.srv  NBV.srv  RrtFindPath.srv
msg/: MissionStateStamped.msg  PointNormStamped.msg
multi_drone_inspection/: CMakeLists.txt  package.xml  simple_tree.bt
multi_drone_inspection/include/kdtree3/: kdtree3.2.hpp  utils.hpp
multi_drone_inspection/include/mdi/: bezier_spline.hpp  functional.hpp  voxblox_manager.hpp
multi_drone_inspection/include/mdi/utils/: random.hpp  utils.hpp
multi_drone_inspection/include/multi_drone_inspection/: bezier_spline.hpp  rrt.hpp  utils.hpp  voxblox_manager.hpp  voxelgrid.hpp
multi_drone_inspection/include/multi_drone_inspection/rrt/: rrt.hpp  rrt_builder.hpp
multi_drone_inspection/include/multi_drone_inspection/utils/: eigen.hpp  math.hpp
multi_drone_inspection/include/multi_drone_inspection/utils/rviz/: rviz.hpp
multi_drone_inspection/launch/: airsim.launch  pid_spline.launch  test_rrt.launch  voxblox.rosparam.yaml
multi_drone_inspection/libs/kdtree/: CMakeLists.txt
multi_drone_inspection/libs/kdtree/include/kdtree/: kdtree.hpp
multi_drone_inspection/libs/log/include/: log.hpp
multi_drone_inspection/rosparam/: rrt.yaml  test_rrt.yaml
multi_drone_inspection/rviz/: path.rviz  test_rrt.rviz
multi_drone_inspection/scripts/: launch_airsim.sh  make_px4_gazebo.sh  spline_interpolation.ipynb
multi_drone_inspection/src/: bezier_spline.cpp  math.cpp  mission_state.cpp  pid_controller.cpp  rrt.cpp  trajectory_follower.cpp  transformlistener.cpp  voxblox_manager.cpp
multi_drone_inspection/src/kdtree3/: kdtree3.2.cpp  kdtree3.cpp
multi_drone_inspection/src/nodes/: rrt_service.cpp
multi_drone_inspection/src/rrt/: rrt.cpp
multi_drone_inspection/test/: kdtree3.test.cpp  octomap.test.cpp  rrt.test.cpp
rosparam/: test_rrt.yaml
rviz/: airsim.rviz  spline.rviz  test_rrt.rviz  test_voxblox.rviz  visualize_kdtree.rviz  voxblox.rviz
scripts/: make_px4.sh  median.awk  (+3 more)
uoe_msgs/: CMakeLists.txt  package.xml
uoe_msgs/msg/: ControllerStateStamped.msg  Degree.msg  DepthRange.msg  DroneConfig.msg  Error.msg  FoV.msg  FoVGainMetric.msg  FovVolume.msg  GainScore.msg  MissionStateStamped.msg  NbvConfig.msg  ObjectMapCompleteness.msg  PointNorm.msg  PointNormStamped.msg  RrtConfig.msg  VoxelVolume.msg  Waypoints.msg
uoe_msgs/srv/: Model.srv  NBV.srv  RrtFindPath.srv
(+237 files in other folders)
